Always build as SystemComponent and AllUsers on CI
Given that we install to a custom path, the AllUsers is implied, but we
make it explicit nevertheless.

SystemComponent hides the VSIX from the extension manager UI, making the
extension only install/update-able via other VSIXes that include it.

--- a/src/Clide.Vsix/Clide.Vsix.csproj
+++ b/src/Clide.Vsix/Clide.Vsix.csproj
@@ -4,6 +4,7 @@
     <IncludePack>true</IncludePack>
     <GenerateBindingRedirects>true</GenerateBindingRedirects>
     <TargetVsixContainerName>Clide.vsix</TargetVsixContainerName>
+
     <CI Condition="'$(CI)' == '' and '$(TF_BUILD)' == 'true'">true</CI>
     <CI Condition="'$(CI)' == '' and '$(APPVEYOR)' != ''">true</CI>
 
@@ -42,5 +43,8 @@
       <PackageFile Include="$(TargetVsixContainer)" Kind="Tools" />
     </ItemGroup>
   </Target>
+
+  <!-- We always build as SystemComponent on CI -->
+  <Target Name="IsSystemComponent" Returns="$(CI)" />
 
 </Project>
