--- a/src/Clide.Vsix/Clide.Vsix.csproj
+++ b/src/Clide.Vsix/Clide.Vsix.csproj
@@ -24,7 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.VSSDK.BuildTools" Version="0.3.0-alpha.*" />
+    <PackageReference Include="Xamarin.VSSDK.BuildTools" Version="0.3.0-alpha.*" Condition="'$(CI)' != 'true'" />
+    <PackageReference Include="Xamarin.VSSDK.BuildTools" Version="0.3.0-alpha.14" Condition="'$(CI)' == 'true'" />
     <!-- Always build with latest VSSDK in CI -->
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="15.1.192" Condition="'$(CI)' == 'true'" />
   </ItemGroup>
