Robustify and fix failing integration tests

--- a/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
+++ b/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
@@ -5,6 +5,8 @@
     <IncludeIntegrationTests>true</IncludeIntegrationTests>
     <EnableDefaultItems>false</EnableDefaultItems>
     <AddSyntheticProjectReferencesForSolutionDependencies>false</AddSyntheticProjectReferencesForSolutionDependencies>
+    <TimeoutSeconds>120</TimeoutSeconds>
+    <RecycleOnFailure>true</RecycleOnFailure>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <CodeAnalysisRuleSet>Clide.IntegrationTests.ruleset</CodeAnalysisRuleSet>
