--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -29,7 +29,7 @@
   <ItemGroup Condition="'$(IncludeTests)' == 'true' or '$(IncludeIntegrationTests)' == 'true'">
     <PackageReference Include="System.Reactive.Linq" Version="3.0.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" Condition="'$(CI)' == 'true'" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <PackageReference Include="Moq" Version="4.5.13" />
     <PackageReference Include="Merq" Version="1.0.0-rc" />
   </ItemGroup>
