In CI, always reference 15.x VSSDK
This causes the product component json to be properly emitted/bundled
in the VSIX so it can be bundled in VS.

--- a/src/Clide.Vsix/Clide.Vsix.csproj
+++ b/src/Clide.Vsix/Clide.Vsix.csproj
@@ -21,6 +21,7 @@
 
   <!-- Dynamic manifest info -->
   <ItemGroup>
+    <!-- We need this since IsSystemComponent can't be specified if the VSIX is built by the 14.0 VSSDK -->
     <VsixInstallation Include="Clide" IsSystemComponent="$(CI)" Condition="'$(VsSDKVersion)' != '' and '$(VsSDKVersion)' &gt; '14.0' " />
   </ItemGroup>
   
