--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -31,6 +31,25 @@
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
 
+  <PropertyGroup Label="Package Versions">
+    <MerqVersion>1.0.0-rc</MerqVersion>
+    <MerqAsyncVersion>1.1.17-rc</MerqAsyncVersion>
+    <MerqVisualStudioVersion>$(MerqAsyncVersion)</MerqVisualStudioVersion>
+    <RxVersion>3.0.0</RxVersion>
+    <FluentInterfaceVersion>2.0.3</FluentInterfaceVersion>
+    <StringResourcesVersion>3.1.10</StringResourcesVersion>
+    <TracerVersion>2.0.8</TracerVersion>
+    <NuGetizerVersion>0.2.2</NuGetizerVersion>
+    <XunitVersion>2.3.1</XunitVersion>
+    
+    <XunitVsixVersion>0.4.0-alpha.*</XunitVsixVersion>
+    <XVSSDKVersion>0.3.0-alpha.*</XVSSDKVersion>
+    <XVSSDKBuildToolsVersion Condition="'$(CI)' != 'true'">0.3.0-alpha.*</XVSSDKBuildToolsVersion>
+    <XVSSDKBuildToolsVersion Condition="'$(CI)' == 'true'">0.3.0-alpha.17</XVSSDKBuildToolsVersion>
+
+    <VSSDKBuildToolsVersion>15.1.192</VSSDKBuildToolsVersion>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(CI)' == ''">
     <CI Condition="'$(TEAMCITY_VERSION)' != '' or 
                    '$(APPVEYOR)' != '' or 
