Remove alpha label from version, in preparation for shipping
Also, count commits from src folder, so that build script, icons or
docs don't affect the version being built.

--- a/src/Version.targets
+++ b/src/Version.targets
@@ -4,6 +4,7 @@
   <PropertyGroup>
     <GitSkipCache>true</GitSkipCache>
     <GitIgnoreTagVersion>true</GitIgnoreTagVersion>
+    <GitCommitsRelativeTo>$(MSBuildThisFileDirectory.TrimEnd('\'))</GitCommitsRelativeTo>
   </PropertyGroup>
 
   <ItemGroup>
