Turn branch name into label instead of metadata if no label exists
Only for non-master branches, having the branch name as a prerelease
label makes it easier to trivially dogfood a specific feature branch,
without having to tweak GitInfo.txt across branches.

So, for example, `dev` branch will get version numbers like 3.1.0-dev.5+sha.asdfasdf.

Branching for a feature `foo`, you'd automatically get version numbers like
3.1.0-foo.6+sha.asfdasdf.

If, however, we already had a branch that's creating an already labeled
release, such as 3.2.0-alpha, the version in (say) dev for that would be
3.2.0-alpha.15+dev.sha.asdfasdf. This allows you to tell apart a build for the
alpha that's being contributed by a specific branch.

--- a/src/Version.targets
+++ b/src/Version.targets
@@ -49,7 +49,8 @@ AssemblyVersion=$(AssemblyVersion)" />
       <_GitBranch Condition="'$(_IndexOfBranchSlash)' == '0'">$(GitBranch)</_GitBranch>
 
       <!-- We'll use GitFlow and ship publicly from master, meaning we don't need branch metadata from there -->
-      <SemVerMetadata Condition="'$(_GitBranch)' != 'master'">$(_GitBranch).</SemVerMetadata>
+      <GitSemVerDashLabel Condition="'$(GitSemVerDashLabel)' == '' and '$(_GitBranch)' != 'master'">-$(_GitBranch)</GitSemVerDashLabel>
+      <SemVerMetadata Condition="'$(GitSemVerDashLabel)' != '-$(_GitBranch)' and '$(_GitBranch)' != 'master'">$(_GitBranch).</SemVerMetadata>
       <SemVerMetadata>$(SemVerMetadata)sha.$(GitCommit)</SemVerMetadata>
 
       <!-- If there is a pre-release label, fix the major.minor.build and increment the release label digit instead. -->
