--- a/src/Clide.Vsix/Clide.Vsix.csproj
+++ b/src/Clide.Vsix/Clide.Vsix.csproj
@@ -9,6 +9,8 @@
     <TargetVsixContainerName>Clide.vsix</TargetVsixContainerName>
     <IsProductComponent>true</IsProductComponent>
     <BypassVsixValidation Condition="'$(CI)' == 'true'">true</BypassVsixValidation>
+    <Experimental Condition="'$(CI)' == 'true'">false</Experimental>
+    <Experimental Condition="'$(CI)' != 'true'">true</Experimental>
 
     <PackageId>Clide</PackageId>
     <Authors>kzu, Daniel Cazzulino</Authors>
@@ -22,17 +24,18 @@
 
   <!-- Dynamic manifest info -->
   <ItemGroup>
-    <!-- We need this since IsSystemComponent can't be specified if the VSIX is built by the 14.0 VSSDK -->
-    <VsixInstallation Include="Clide" IsSystemComponent="$(CI)" Condition="'$(VsSDKVersion)' != '' and '$(VsSDKVersion)' &gt; '14.0' " />
+    <VsixInstallation Include="Clide" SystemComponent="$(CI)" Experimental="$(Experimental)" />
   </ItemGroup>
   
   <ItemGroup>
     <None Include="source.extension.vsixmanifest" />
     <PackageFile Include="build\*.*" Kind="Build" />
+    <PackageFile Include="MSBuilder.VsixInstaller" Version="1.0.4" Kind="Dependency" />
     <BindingRedirect Include="Clide" From="3.0.0.0" To="99.9.9.9" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MSBuilder.VsixInstaller" Version="1.0.4" />
     <PackageReference Include="Xamarin.VSSDK.BuildTools" Version="$(XVSSDKBuildToolsVersion)" />
     <!-- Always build with latest VSSDK in CI -->
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="$(VSSDKBuildToolsVersion)" Condition="'$(CI)' == 'true'" />
