Move GitInfo.txt to src directory for proper versioning

--- a/src/Version.targets
+++ b/src/Version.targets
@@ -3,8 +3,10 @@
 
   <PropertyGroup>
     <GitSkipCache>true</GitSkipCache>
+    <GitSkipReadCache>true</GitSkipReadCache>
+    <GitSkipWriteCache>true</GitSkipWriteCache>
     <GitIgnoreTagVersion>true</GitIgnoreTagVersion>
-    <GitCommitsRelativeTo>$(MSBuildThisFileDirectory.TrimEnd('\'))</GitCommitsRelativeTo>
+    <GitVersionFile>src\GitInfo.txt</GitVersionFile>
   </PropertyGroup>
 
   <ItemGroup>
