[asyncreview] - Added SDK and Threading Analyzers packages
These are the VS analyzers used to detect bad async practices, so we install them on the projects in order to track the warnings/errors in our code base from now on

--- a/src/Clide.Extensibility/Clide.Extensibility.csproj
+++ b/src/Clide.Extensibility/Clide.Extensibility.csproj
@@ -6,6 +6,7 @@
 
     <PackageId>Clide.Extensibility</PackageId>
     <IsPackable>false</IsPackable>
+    <IncludeAnalyzers>true</IncludeAnalyzers>
   </PropertyGroup>
 
   <ItemGroup>
