Don't build dev14 anymore

--- a/tfs.yml
+++ b/tfs.yml
@@ -9,18 +9,18 @@ steps:
   displayName: Restore
   inputs:
     solution: build.proj
-    msbuildArguments: /t:Restore /p:Dev=14.0 /bl:"$(Build.ArtifactStagingDirectory)\restore.binlog"
+    msbuildArguments: /t:Restore /bl:"$(Build.ArtifactStagingDirectory)\restore.binlog"
 
 - task: MSBuild@1
   displayName: Build
   inputs:
     solution: build.proj
-    msbuildArguments: /t:Build /p:Dev=14.0 /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)" /bl:"$(Build.ArtifactStagingDirectory)\build.binlog"
+    msbuildArguments: /t:Build /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)" /bl:"$(Build.ArtifactStagingDirectory)\build.binlog"
 
 - task: VSTest@2
   displayName: Test
   inputs:
-    testAssemblyVer2: src\Clide.UnitTests\bin\*\net461\Clide.UnitTests.dll
+    testAssemblyVer2: src\Clide.UnitTests\bin\**\Clide.UnitTests.dll
     runInParallel: 'true'
     codeCoverageEnabled: 'true'
     publishRunAttachments: 'true'
@@ -29,7 +29,7 @@ steps:
   displayName: Push
   inputs:
     solution: build.proj
-    msbuildArguments: /t:Package,Push /p:Dev=14.0 /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)" /p:StorageAccessKey=$(StorageAccessKey) /bl:"$(Build.ArtifactStagingDirectory)\push.binlog"
+    msbuildArguments: /t:Package,Push /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)" /p:StorageAccessKey=$(StorageAccessKey) /bl:"$(Build.ArtifactStagingDirectory)\push.binlog"
 
 - task: PublishBuildArtifacts@1
   displayName: Publish Artifact
